Implemented auto-navigation for omnibox suggestions.

--- a/SLBr/Pages/Browser.xaml
+++ b/SLBr/Pages/Browser.xaml
@@ -34,7 +34,7 @@
                                 <Separator Visibility="Collapsed" x:Name="NewUpdateMenuSeparator"/>
                                 <MenuItem Icon="&#xEC6C;" Header="New Tab" Click="ButtonAction" Tag="5&lt;,&gt;{Homepage}"/>
                                 <MenuItem Icon="&#xE727;" Header="New Private Tab" Click="ButtonAction" Tag="5&lt;,&gt;slbr://newtab&lt;,&gt;Private"/>
-                                <MenuItem Icon="&#xf16b;" Header="New Group" Click="ButtonAction" Tag="80"/>
+                                <MenuItem Icon="&#xF5ED;" Header="New Group" Click="ButtonAction" Tag="80"/>
                                 <MenuItem Icon="&#xe737;" Header="New Window" Click="ButtonAction" Tag="7"/>
                                 <Separator/>
                                 <MenuItem Icon="&#xE81C;" Header="History">
@@ -472,7 +472,7 @@
                         </Border>
                         <TextBlock Grid.Column="1" IsHitTestVisible="False" Text="Search or type a URL" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0" Foreground="{StaticResource BorderBrush}" x:Name="OmniBoxPlaceholder" Visibility="Visible"/>
                         <TextBlock Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0" x:Name="OmniBoxOverlayText" Visibility="Visible" Foreground="{StaticResource GrayBrush}"/>
-                        <ComboBox TextSearch.TextPath="Text" IsTextSearchEnabled="False" StaysOpenOnEdit="True" VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.VirtualizationMode="Recycling" IsSynchronizedWithCurrentItem="False" DropDownOpened="OmniBox_DropDownOpened" DropDownClosed="OmniBox_DropDownClosed" Style="{StaticResource DropDownTextBox}" BorderThickness="0" Text="" Grid.Column="1" Height="Auto" BorderBrush="Transparent" Margin="0" Background="Transparent" Tag="Loading" PreviewKeyUp="OmniBox_PreviewKeyUp" PreviewKeyDown="OmniBox_PreviewKeyDown" IsKeyboardFocusWithinChanged="OmniBox_IsKeyboardFocusWithinChanged" x:Name="OmniBox" Padding="0" Width="Auto" HorizontalAlignment="Stretch">
+                        <ComboBox TextSearch.TextPath="Text" IsTextSearchEnabled="False" StaysOpenOnEdit="True" VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.VirtualizationMode="Recycling" IsSynchronizedWithCurrentItem="False" DropDownOpened="OmniBox_DropDownOpened" DropDownClosed="OmniBox_DropDownClosed" Style="{StaticResource DropDownTextBox}" BorderThickness="0" Text="" Grid.Column="1" Height="Auto" BorderBrush="Transparent" Margin="0" Background="Transparent" Tag="Loading" PreviewKeyUp="OmniBox_PreviewKeyUp" PreviewKeyDown="OmniBox_PreviewKeyDown" IsKeyboardFocusWithinChanged="OmniBox_IsKeyboardFocusWithinChanged" x:Name="OmniBox" Padding="0" Width="Auto" HorizontalAlignment="Stretch" SelectionChanged="OmniBox_SelectionChanged">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Focusable="False" Orientation="Horizontal" Margin="0">
