--- a/SLBr/Pages/Browser.xaml
+++ b/SLBr/Pages/Browser.xaml
@@ -323,7 +323,6 @@
 
                     <WinUI:PopupButton BorderThickness="0" Visibility="Collapsed" x:Name="TranslateButton" DockPanel.Dock="Right" Margin="0,0,5,0" Style="{StaticResource ToolBarPopupIconButton}" ToolTip="Translate" Content="&#xE8C1;">
                         <WinUI:PopupButton.PopupContent>
-
                             <Border Width="250" Background="{StaticResource PrimaryBrush}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1" CornerRadius="5" Padding="10">
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -429,10 +428,7 @@
                                                         </Border>
                                                         <TextBlock x:Name="CertificateValidation" VerticalAlignment="Center" Text="Certificate is valid"/>
                                                     </DockPanel>
-                                                    <Expander x:Name="CertificateInfo" Margin="0,10,0,0">
-                                                        <Expander.Header>
-                                                            Certificate
-                                                        </Expander.Header>
+                                                    <Expander x:Name="CertificateInfo" Margin="0,10,0,0" Header="Certificate">
                                                         <StackPanel>
                                                             <TextBlock Margin="0,0,0,10" VerticalAlignment="Center" Text="Issued to" FontWeight="Bold"/>
                                                             <StackPanel Orientation="Horizontal" Margin="10,0,0,10">
