--- a/SLBr/Pages/DownloadsPage.xaml
+++ b/SLBr/Pages/DownloadsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SLBr.Pages.History"
+﻿<UserControl x:Class="SLBr.Pages.DownloadsPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -23,40 +23,22 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <TextBlock FontWeight="DemiBold" Margin="0,0,10,0" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="22" Text="&#xe81c;"/>
+                <TextBlock FontWeight="DemiBold" Margin="0,0,10,0" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="22" Text="&#xe896;"/>
 
-                <TextBlock Grid.Column="1" FontWeight="DemiBold" FontSize="25">History</TextBlock>
+                <TextBlock Grid.Column="1" FontWeight="DemiBold" FontSize="25">Downloads</TextBlock>
                 <TextBox x:Name="SearchBox" Grid.Column="2" HorizontalAlignment="Right" Width="300" TextChanged="SearchBox_TextChanged"/>
             </Grid>
         </Border>
         <WinUI:WinUITabControl Grid.Row="1" Style="{StaticResource WinUITabControl}">
-            <!--<TabItem Header="Recently closed" Tag="&#xec6c;">
-                <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto" Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=WinUI:WinUITabControl}}">
-                    <StackPanel Margin="25" MaxWidth="800">
-                        <DockPanel Margin="0,0,0,25" VerticalAlignment="Center" Width="Auto" HorizontalAlignment="Stretch">
-                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">Recently closed</TextBlock>
-                        </DockPanel>
-                    </StackPanel>
-                </ScrollViewer>
-            </TabItem>
-            <TabItem Style="{DynamicResource TabSeparator}" Margin="0,-5"/>
-            <TabItem Header="All" Tag="&#xe8a9;">
-                <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto" Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=WinUI:WinUITabControl}}">
-                    <StackPanel Margin="25" MaxWidth="800">
-                        <DockPanel Margin="0,0,0,25" VerticalAlignment="Center" Width="Auto" HorizontalAlignment="Stretch">
-                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">All</TextBlock>
-                        </DockPanel>
-                    </StackPanel>
-                </ScrollViewer>
-            </TabItem>-->
-            <TabItem Header="Today" Tag="&#xe787;">
+            <TabItem Header="All files" Tag="&#xe8a9;">
                 <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto" Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=WinUI:WinUITabControl}}">
                     <StackPanel Margin="25" MaxWidth="800">
                         <DockPanel Margin="0,0,0,25" VerticalAlignment="Center" Width="Auto" HorizontalAlignment="Stretch" Height="35">
+                            <Button DockPanel.Dock="Right" Click="DownloadsFolderButton_Click" ToolTip="Open downloads folder" Content="&#xe8b7;" Margin="0,0,0,0" Style="{StaticResource IconButton}"/>
                             <Button Visibility="Collapsed" Foreground="Red" DockPanel.Dock="Right" Click="DeleteSelectedButton_Click" x:Name="DeleteSelectedButton" ToolTip="Delete selected" Content="&#xe74d;" Margin="0,0,5,0" Style="{StaticResource IconButton}"/>
-                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">Today</TextBlock>
+                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">All files</TextBlock>
                         </DockPanel>
-                        <ListBox KeyDown="HistoryList_KeyDown" SelectionChanged="HistoryList_SelectionChanged" SelectionMode="Extended" VirtualizingPanel.VirtualizationMode="Recycling" x:Name="HistoryList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
+                        <ListBox KeyDown="DownloadsList_KeyDown" SelectionChanged="DownloadsList_SelectionChanged" SelectionMode="Extended" VirtualizingPanel.VirtualizationMode="Recycling" x:Name="DownloadsList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
                             <ListBox.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel/>
@@ -103,15 +85,41 @@
                             </ListBox.Resources>
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
-                                    <Border Width="Auto" HorizontalAlignment="Stretch">
-                                        <DockPanel Margin="5">
-                                            <Button DockPanel.Dock="Right" Click="DeleteSingleButton_Click" ToolTip="Remove" Content="&#xe711;" Margin="0" Style="{StaticResource ToolBarIconButton}"/>
-                                            <Button DockPanel.Dock="Right" MouseUp="HistoryButton_MouseUp" Click="HyperlinkButton_Click" Content="&#xe8a7;" ToolTip="Open" Tag="{Binding Arguments}" Margin="0,0,5,0" Style="{StaticResource ToolBarIconButton}"/>
-                                            <TextBlock Margin="0,0,5,0" DockPanel.Dock="Left" Width="35" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="20" Text="&#xeb41;"/>
-                                            <TextBlock Margin="0,0,5,0" Width="Auto" VerticalAlignment="Center" DockPanel.Dock="Left" Text="{Binding Name}" HorizontalAlignment="Stretch"/>
-                                            <TextBlock Margin="0,0,5,0" FontSize="10" Foreground="{StaticResource GrayBrush}" VerticalAlignment="Center" Text="{Binding Tooltip}" HorizontalAlignment="Stretch" Width="Auto"/>
-                                        </DockPanel>
-                                    </Border>
+                                    <StackPanel Margin="10">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Border Width="35" Height="35" Margin="0,0,5,0" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}" CornerRadius="5">
+                                                <TextBlock Text="{Binding Icon}" Margin="0" FontSize="18" FontWeight="UltraLight" VerticalAlignment="Center" TextAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}"/>
+                                            </Border>
+                                            <Grid Grid.Column="1" VerticalAlignment="Center">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition/>
+                                                    <RowDefinition/>
+                                                </Grid.RowDefinitions>
+                                                <TextBlock Text="{Binding FileName}" TextTrimming="CharacterEllipsis"/>
+                                                <TextBlock Grid.Row="1" Text="{Binding FormattedProgress}" FontSize="10" Foreground="{StaticResource GrayBrush}"/>
+                                            </Grid>
+                                            <Button Grid.Column="2" Height="35" Click="CancelSingleButton_Click" Visibility="{Binding Stop}">
+                                                <DockPanel VerticalAlignment="Center">
+                                                    <TextBlock Text="&#xE71A;" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" FontSize="16"/>
+                                                    <TextBlock TextAlignment="Center" Text="Cancel" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                </DockPanel>
+                                            </Button>
+                                            <Button Grid.Column="2" Height="35" Click="OpenSingleButton_Click" Visibility="{Binding Open}">
+                                                <DockPanel VerticalAlignment="Center">
+                                                    <TextBlock Text="&#xE838;" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" FontSize="16"/>
+                                                    <TextBlock TextAlignment="Center" Text="Open" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                </DockPanel>
+                                            </Button>
+                                            <Button Grid.Column="3" HorizontalAlignment="Right" Click="DeleteSingleButton_Click" ToolTip="Remove" Content="&#xe711;" Margin="5,0,0,0" Style="{StaticResource IconButton}"/>
+                                        </Grid>
+                                        <ProgressBar IsIndeterminate="{Binding IsIndeterminate}" Margin="0,5,0,0" Width="Auto" Maximum="100" Visibility="{Binding Progress}" Value="{Binding PercentComplete}"/>
+                                    </StackPanel>
                                 </DataTemplate>
                             </ListBox.ItemTemplate>
                         </ListBox>
